--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@bytemd/plugin-breaks": "^1.21.0",
+    "@bytemd/plugin-footnotes": "^1.12.4",
+    "@bytemd/plugin-frontmatter": "^1.21.0",
     "@bytemd/plugin-gemoji": "^1.21.0",
     "@bytemd/plugin-gfm": "^1.21.0",
+    "@bytemd/plugin-highlight": "^1.21.0",
     "@bytemd/plugin-highlight-ssr": "^1.21.0",
     "@bytemd/plugin-medium-zoom": "^1.21.0",
     "@bytemd/react": "^1.21.0",
@@ -18,6 +22,8 @@
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "remark-gfm": "^4.0.0",
+    "superagent": "^9.0.2",
+    "superagent-promise": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
