--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/compatible": "^5.1.3",
     "@ant-design/icons": "^5.3.7",
     "@bytemd/plugin-breaks": "^1.21.0",
     "@bytemd/plugin-footnotes": "^1.12.4",
@@ -14,16 +15,17 @@
     "@bytemd/plugin-medium-zoom": "^1.21.0",
     "@bytemd/react": "^1.21.0",
     "@ebay/nice-modal-react": "^1.2.13",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tonconnect/sdk": "^3.0.3",
     "@tonconnect/ui-react": "^2.0.5",
     "antd": "^5.19.0",
-    "echarts": "^5.5.0",
     "github-markdown-css": "^5.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
@@ -58,6 +60,7 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "tailwindcss-line-clamp": "^1.0.5"
   }
 }
