--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
     "remark-gfm": "^4.0.0",
+    "serve": "^14.2.3",
     "superagent": "^9.0.2",
     "superagent-promise": "^1.1.0",
     "web-vitals": "^2.1.4"
