--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -6,9 +6,9 @@ services:
     container_name: nginx
     restart: always
     volumes:
-      - ./development/nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./development/nginx/ssl/nginx.key:/etc/ssl/certs/nginx.key
-      - ./development/nginx/ssl/nginx.crt:/etc/ssl/certs/nginx.crt
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/ssl/nginx.key:/etc/ssl/certs/nginx.key
+      - ./nginx/ssl/nginx.crt:/etc/ssl/certs/nginx.crt
       - ./frontend/dist/:/usr/share/nginx/html/
     ports:
       - 443:443
