--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,9 @@
     "@tonconnect/sdk": "^3.0.3",
     "@tonconnect/ui-react": "^2.0.5",
     "antd": "^5.19.0",
+    "frontend": "file:",
     "github-markdown-css": "^5.6.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-infinite-scroll-component": "^6.1.0",
