Accelerate front-end loading speed by enabling gzip and finish the package script

--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -15,8 +15,7 @@ services:
   backend:
     build:
       context: ./backend
-      dockerfile: ./backend/.dockerfile
-    image: blog_backend:latest
+      dockerfile: ./.dockerfile
     container_name: blog_backend
     restart: always
     expose: 
