--- a/deployment/nginx/nginx.conf
+++ b/deployment/nginx/nginx.conf
@@ -11,7 +11,10 @@ include mime.types;
 default_type application/octet-stream;
 sendfile on;    
 proxy_cache_path /var/cache/nginx/data keys_zone=mycache:10m;
-
+gzip on;
+gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+gzip_proxied any;
+gzip_vary on;
 upstream blog_stream{
     ip_hash;
     server blog_backend:8080;
