--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@ant-design/compatible": "^5.1.3",
     "@ant-design/icons": "^5.3.7",
@@ -15,34 +16,34 @@
     "@bytemd/plugin-medium-zoom": "^1.21.0",
     "@bytemd/react": "^1.21.0",
     "@ebay/nice-modal-react": "^1.2.13",
-    "@tailwindcss/line-clamp": "^0.4.4",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@tonconnect/sdk": "^3.0.3",
-    "@tonconnect/ui-react": "^2.0.5",
+    "@metamask/sdk": "^0.31.2",
+    "@metamask/sdk-react-ui": "^0.29.2",
     "antd": "^5.19.0",
+    "dotenv": "^16.4.7",
+    "eslint": "^9.17.0",
+    "framer-motion": "^11.15.0",
     "frontend": "file:",
     "github-markdown-css": "^5.6.0",
     "moment": "^2.30.1",
+    "motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "^5.0.1",
     "react-toastify": "^10.0.5",
     "remark-gfm": "^4.0.0",
     "serve": "^14.2.3",
     "superagent": "^9.0.2",
     "superagent-promise": "^1.1.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^4.16.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
+    "lint": "eslint ."
   },
   "eslintConfig": {
     "extends": [
@@ -63,7 +64,11 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.3",
-    "tailwindcss-line-clamp": "^1.0.5"
+    "@vitejs/plugin-react": "^4.3.4",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
+    "tailwindcss-line-clamp": "^1.0.5",
+    "vite": "^6.0.3"
   }
 }
